--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -1,85 +1,85 @@
 .i { background-repeat: no-repeat; display: inline-block; }
 
-.i-account { background-position: -8px -8px; width: 15px; height: 15px; }
+.i-arrow-blue-down { background-position: -8px -8px; width: 15px; height: 7.319px; }
 
-.i-arrow-blue-down { background-position: -23px -8px; width: 15px; height: 7.319px; }
+.i-arrow-small-up { background-position: -23px -8px; width: 12.667px; height: 7.083px; }
 
-.i-arrow-small-up { background-position: -38px -8px; width: 12.667px; height: 7.083px; }
+.i-arrow-white-down { background-position: -35px -8px; width: 15px; height: 7.319px; }
 
-.i-arrow-white-down { background-position: -50px -8px; width: 15px; height: 7.319px; }
+.i-close-icon { background-position: -50px -8px; width: 15px; height: 15px; }
 
-.i-close-icon { background-position: -65px -8px; width: 15px; height: 15px; }
+.i-comment-count-small { background-position: -65px -8px; width: 14px; height: 12px; }
 
-.i-comment-count-small { background-position: -80px -8px; width: 14px; height: 12px; }
+.i-date { background-position: -79px -8px; width: 10px; height: 10px; }
 
-.i-date { background-position: -94px -8px; width: 10px; height: 10px; }
+.i-ee-add-button { background-position: -89px -8px; width: 54px; height: 47px; }
 
-.i-ee-add-button { background-position: -104px -8px; width: 54px; height: 47px; }
+.i-fb { background-position: -156px -8px; width: 10.88px; height: 22.38px; }
 
-.i-fb { background-position: -171px -8px; width: 10.88px; height: 22.38px; }
+.i-filter-arrow-down { background-position: -166px -8px; width: 20px; height: 11.431px; }
 
-.i-filter-arrow-down { background-position: -181px -8px; width: 20px; height: 11.431px; }
+.i-filter-arrow-left { background-position: -186px -8px; width: 8.703px; height: 15px; }
 
-.i-filter-arrow-left { background-position: -201px -8px; width: 8.703px; height: 15px; }
+.i-filter-arrow-right { background-position: -194px -8px; width: 8.702px; height: 15px; }
 
-.i-filter-arrow-right { background-position: -209px -8px; width: 8.702px; height: 15px; }
+.i-filter-arrow-up { background-position: -202px -8px; width: 20px; height: 11.431px; }
 
-.i-filter-arrow-up { background-position: -217px -8px; width: 20px; height: 11.431px; }
+.i-fullscreen-toggle { background-position: -222px -8px; width: 12px; height: 12px; }
 
-.i-fullscreen-toggle { background-position: -237px -8px; width: 12px; height: 12px; }
+.i-gallery-arrow { background-position: -234px -8px; width: 7.333px; height: 16.333px; }
 
-.i-gallery-arrow { background-position: -249px -8px; width: 7.333px; height: 16.333px; }
+.i-gallery-fullimage-icon { background-position: -241px -8px; width: 15px; height: 15px; }
 
-.i-gallery-fullimage-icon { background-position: -256px -8px; width: 15px; height: 15px; }
+.i-gallery-thumb-icon { background-position: -256px -8px; width: 15px; height: 15px; }
 
-.i-gallery-thumb-icon { background-position: -271px -8px; width: 15px; height: 15px; }
+.i-gallery { background-position: -271px -8px; width: 16px; height: 14px; }
 
-.i-gallery { background-position: -286px -8px; width: 16px; height: 14px; }
+.i-gplus { background-position: -287px -8px; width: 24.361px; height: 20.535px; }
 
-.i-gplus { background-position: -302px -8px; width: 24.361px; height: 20.535px; }
+.i-guardian-logo { background-position: -311px -8px; width: 107.667px; height: 20.125px; }
 
-.i-guardian-logo { background-position: -326px -8px; width: 107.667px; height: 20.125px; }
+.i-guardian-picks { background-position: -418px -8px; width: 15px; height: 46.624px; }
 
-.i-guardian-picks { background-position: -433px -8px; width: 15px; height: 46.624px; }
+.i-image-white { background-position: -433px -8px; width: 12px; height: 9px; }
 
-.i-image-white { background-position: -448px -8px; width: 12px; height: 9px; }
+.i-image { background-position: -445px -8px; width: 12px; height: 9px; }
 
-.i-image { background-position: -460px -8px; width: 12px; height: 9px; }
+.i-livequote-after { background-position: -457px -8px; width: 37px; height: 20px; }
 
-.i-livequote-after { background-position: -472px -8px; width: 37px; height: 20px; }
+.i-livequote-before { background-position: -494px -8px; width: 37px; height: 20px; }
 
-.i-livequote-before { background-position: -509px -8px; width: 37px; height: 20px; }
+.i-local-nav-arrow { background-position: -531px -8px; width: 49px; height: 37px; }
 
-.i-local-nav-arrow { background-position: -448px -28px; width: 49px; height: 37px; }
+.i-mail { background-position: -433px -45px; width: 28.004px; height: 20px; }
 
-.i-mail { background-position: -497px -28px; width: 28.004px; height: 20px; }
+.i-menu-active { background-position: -461px -45px; width: 18px; height: 12px; }
 
-.i-menu-active { background-position: -525px -28px; width: 18px; height: 12px; }
+.i-menu { background-position: -479px -45px; width: 18px; height: 12px; }
 
-.i-menu { background-position: -543px -28px; width: 18px; height: 12px; }
+.i-powered-by-ee { background-position: -497px -45px; width: 68px; height: 31px; }
 
-.i-powered-by-ee { background-position: -497px -48px; width: 68px; height: 31px; }
+.i-profile { background-position: -565px -45px; width: 15px; height: 15px; }
 
-.i-quote-marks { background-position: -8px -79px; width: 64px; height: 32px; }
+.i-quote-marks { background-position: -8px -76px; width: 64px; height: 32px; }
 
-.i-red-card { background-position: -85px -79px; width: 9px; height: 12px; }
+.i-red-card { background-position: -85px -76px; width: 9px; height: 12px; }
 
-.i-search-blue { background-position: -94px -79px; width: 14px; height: 14px; }
+.i-search-blue { background-position: -94px -76px; width: 14px; height: 14px; }
 
-.i-search { background-position: -108px -79px; width: 14px; height: 14px; }
+.i-search { background-position: -108px -76px; width: 14px; height: 14px; }
 
-.i-sport-arrow-small { background-position: -122px -79px; width: 5.802px; height: 10px; }
+.i-sport-arrow-small { background-position: -122px -76px; width: 5.802px; height: 10px; }
 
-.i-sport-arrow { background-position: -127px -79px; width: 8.703px; height: 15px; }
+.i-sport-arrow { background-position: -127px -76px; width: 8.703px; height: 15px; }
 
-.i-story-quote { background-position: -135px -79px; width: 49px; height: 25px; }
+.i-story-quote { background-position: -135px -76px; width: 49px; height: 25px; }
 
-.i-top-stories-active { background-position: -184px -79px; width: 16px; height: 16px; }
+.i-top-stories-active { background-position: -184px -76px; width: 16px; height: 16px; }
 
-.i-top-stories { background-position: -200px -79px; width: 16px; height: 16px; }
+.i-top-stories { background-position: -200px -76px; width: 16px; height: 16px; }
 
-.i-twitter { background-position: -216px -79px; width: 25px; height: 20px; }
+.i-twitter { background-position: -216px -76px; width: 25px; height: 20px; }
 
-.i-witness-logo { background-position: -241px -79px; width: 119px; height: 16px; }
+.i-witness-logo { background-position: -241px -76px; width: 119px; height: 16px; }
 
-.i-yellow-card { background-position: -360px -79px; width: 9px; height: 12px; }
+.i-yellow-card { background-position: -360px -76px; width: 9px; height: 12px; }
