--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -1,6 +1,6 @@
 @(page: MetaData)(implicit request: RequestHeader)
 @import conf.Switches.SearchSwitch
-@import conf.Switches.IdentityAccountNavigationSwitch
+@import conf.Switches.IdentityProfileNavigationSwitch
 
 <header id="header" role="banner" data-link-name="global navigation: header">
     <div class="header__inner gs-container cf">
@@ -40,12 +40,12 @@
             <i class="i i-top-stories"></i>
         </a>
 
-        @if(IdentityAccountNavigationSwitch.isSwitchedOn) {
-        <a href="/identity/signin" data-link-name="User account"
-            class="control control--account js-hidden">
+        @if(IdentityProfileNavigationSwitch.isSwitchedOn) {
+        <a href="/identity/signin" data-link-name="User profile"
+            class="control control--profile js-hidden">
             <i class="i i-nav-divider"></i>
-            <span class="js-account-info control--account__info">Your account</span>
-            <i class="i i-account"></i>
+            <span class="js-profile-info control--profile__info">Your profile</span>
+            <i class="i i-profile"></i>
         </a>
         }
 
