--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -525,7 +525,7 @@ a.cta, .cta a {
 }
 
 .fronts .lists .connectedList {
-    min-height: 100px;
+    min-height: 50px;
 }
 
 .fronts .lists .connectedList.pending {
@@ -740,12 +740,35 @@ a.cta, .cta a {
 }
 
 .fronts .needs-more {
+    padding: 0 0 0 10px;
     color: #d61d00;
-    padding: 5px 0 0 10px;
     font-size: 12px;
     text-transform: uppercase;    
 }
 
 .fronts .needs-more__num {
     font-weight: bold;
+}
+
+.fronts .list-footer {
+    padding: 2px 10px 10px 10px;
+    font-size: 10px;    
+    border-top: 3px solid #ccc;
+}
+
+.fronts .list-footer.editable {
+    background-color: #eee;
+}
+
+.fronts .list-footer a {
+    color: #666;
+    cursor: pointer;
+}
+
+.fronts .list-footer .settings input {
+}
+
+.fronts .list-footer .settings input.tiny {
+    width: 40px;
+    text-align: right;
 }
