--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -72,12 +72,14 @@
 
 .i-story-quote { background-position: -136px -76px; width: 49px; height: 25px; }
 
-.i-top-stories-active { background-position: -185px -76px; width: 16px; height: 16px; }
+.i-swipe-arrow { background-position: -185px -76px; width: 7.21px; height: 16.117px; }
 
-.i-top-stories { background-position: -201px -76px; width: 16px; height: 16px; }
+.i-top-stories-active { background-position: -192px -76px; width: 16px; height: 16px; }
 
-.i-twitter { background-position: -217px -76px; width: 25px; height: 20px; }
+.i-top-stories { background-position: -208px -76px; width: 16px; height: 16px; }
 
-.i-witness-logo { background-position: -242px -76px; width: 119px; height: 16px; }
+.i-twitter { background-position: -224px -76px; width: 25px; height: 20px; }
 
-.i-yellow-card { background-position: -361px -76px; width: 9px; height: 12px; }
+.i-witness-logo { background-position: -249px -76px; width: 119px; height: 16px; }
+
+.i-yellow-card { background-position: -368px -76px; width: 9px; height: 12px; }
