--- a/interactive/app/views/fragments/interactiveBody.scala.html
+++ b/interactive/app/views/fragments/interactiveBody.scala.html
@@ -42,7 +42,7 @@
     @if(DiscussionSwitch.isSwitchedOn && interactive.isCommentable) {
         <div class="article__discussion article-body"></div>
         <div class="d-show-cta-wrapper">    
-            <a class="d-show-cta js-show-discussion js-top" href="@LinkTo{/discussion/@interactive.shortUrlId}"
+            <a class="d-show-cta js-show-discussion js-top" href="@LinkTo{/discussion@interactive.shortUrlId}"
                data-is-ajax data-link-name="View all comments">
                 View all comments <span class="d-commentcount speech-bubble"><span class="js-commentcount__number"></span></span>
             </a>
