--- a/common/app/assets/stylesheets/module/_forms.scss
+++ b/common/app/assets/stylesheets/module/_forms.scss
@@ -7,7 +7,7 @@
 
 form,
 .form {
-    margin: 0 auto $gutter;
+    margin: $baseline*9 auto;
     max-width: 480px;
     padding: 0 $gutter;
 }
@@ -18,15 +18,15 @@ form,
 }
 
 .form-fields {
-    margin: $baseline*2 0 0 0;
+    margin: $baseline*6 0;
     padding: 0;
 }
 
 .form-fields > li,
 .form-field {
     list-style: none;
-    margin: 0;
-    padding: $baseline*2 0;
+    margin: 0 0 $baseline*6 0;
+    padding: 0;
 }
 
 .form-field--error {
@@ -41,11 +41,14 @@ form,
 
 .form-field__error {
     color: $newsRed;
+    margin-top: $baseline*3;
 }
 
 label,
 .label {
     display: block;
+    font-size: 14px;
+    margin-bottom: $baseline*3;
 }
 
 .text-input {
@@ -59,23 +62,24 @@ label,
 
 .submit-input {
     background-color: $ctaBlue;
-    border: 1px solid darken($ctaBlue, 5%);
+    border: 0 none;
     color: #fff;
-    font-family: $sans-serif;
-    font-weight: 800;
+    font-size: 14px;
     margin: 0 $gutter 0 0;
-    padding: $baseline*2 $baseline*4;
+    min-width: 140px;
+    padding: $baseline+1 0 $baseline*4 $gutter/4;
+    text-align: left;
 
-    &:active {
-        background-color: darken($ctaBlue, 4%);
-        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+    &:active, &:hover, &:focus {
+        background: #000;
     }
 }
 
 .text-input__note {
     font-family: $sans-serif;
-    font-size: 13px;
-    font-size: 1.3rem;
+    font-size: 12px;
+    font-size: 1.2rem;
+    margin-top: $baseline*3;
 }
 
 .check-list {}
@@ -86,4 +90,9 @@ label,
     font-family: $sans-serif;
     font-size: 13px;
     font-size: 1.3rem;
+}
+
+.check-label--helper {
+    position: relative;
+    top: $baseline;
 }
